fixed overflow of detailView on Chrome/Windows

--- a/src/sass/Molecules/_detailSection.scss
+++ b/src/sass/Molecules/_detailSection.scss
@@ -8,6 +8,7 @@ $full-detail-height: 100px;
   height: 100%;
 
   overflow: hidden;
+  position: relative;
 
   background: color(map);
   background-size: cover;
